--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <h1>x</h1>
     <div class="container">
-      <img src="/images/drawers.jpg" alt="Drawers">
+      <img src="images/drawers.jpg" alt="Drawers">
       <div class="content">
         <div class="text">
             <h2>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h2>
@@ -33,7 +33,7 @@
         </div>
         <div class="author">
           <div class="pfp">
-            <img src="/images/avatar-michelle.jpg" alt="Michelle">
+            <img src="images/avatar-michelle.jpg" alt="Michelle">
             <span>Michelle Appleton</span>
           </div>
           <div class="share">
